update LeetCode Weekly Contest 422

--- a/algorithm/LeetCode/[Easy] 1957. Delete Characters to Make Fancy String.md
+++ b/algorithm/LeetCode/[Easy] 1957. Delete Characters to Make Fancy String.md
@@ -51,3 +51,30 @@ class Solution:
     def makeFancyString(self, s: str) -> str:
         return ''.join([k*min(len(list(g)),2) for k, g in itertools.groupby(s)])
 ```
+
+**Solution 2: (Counter)**
+```
+Runtime: 11 ms
+Memory: 42.74 MB
+```
+```c++
+class Solution {
+public:
+    string makeFancyString(string s) {
+        int cnt = 0;
+        char pre = ' ';
+        string ans;
+        for (auto c: s) {
+            if (c != pre) {
+                ans += c;
+                pre = c;
+                cnt = 1;
+            } else if (cnt < 2) {
+                ans += c;
+                cnt += 1;
+            }
+        }
+        return ans;
+    }
+};
+```
