--- a/algorithm/LeetCode/[Easy] 2490. Circular Sentence.md
+++ b/algorithm/LeetCode/[Easy] 2490. Circular Sentence.md
@@ -69,3 +69,53 @@ class Solution:
                 return False
         return sentence[0] == sentence[-1]
 ```
+
+**Solution 2: (String, split string)**
+```
+Runtime: 0 ms
+Memory: 9.29 MB
+```
+```c++
+class Solution {
+public:
+    bool isCircularSentence(string sentence) {
+        vector<string> dp;
+        stringstream ss(sentence);
+        string w;
+        char pre;
+        int i;
+        while (getline(ss, w, ' ')) {
+            dp.push_back(w);
+        }
+        dp.push_back(dp[0]);
+        pre = dp[0][dp[0].length()-1];
+        for (i = 1; i < dp.size(); i ++) {
+            if (dp[i][0] != pre) {
+                return false;
+            }
+            pre = dp[i][dp[i].length()-1];
+        }
+        return true;
+    }
+};
+```
+
+**Solution 3: (String, space optimized)**
+```
+Runtime: 0 ms
+Memory: 8.22 MB
+```
+```c++
+class Solution {
+public:
+    bool isCircularSentence(string sentence) {
+        int n = sentence.size();
+        for (int i = 0; i < n; ++i) {
+            if (sentence[i] == ' ' && sentence[i-1] != sentence[i+1]) {
+                return false;
+            }
+        }
+        return sentence[0] == sentence[n-1];
+    }
+};
+```
