--- a/algorithm/LeetCode/[Easy] 3254. Find the Power of K-Size Subarrays I.md
+++ b/algorithm/LeetCode/[Easy] 3254. Find the Power of K-Size Subarrays I.md
@@ -81,3 +81,34 @@ public:
     }
 };
 ```
+
+**Solution 2: (Greedy)**
+```
+Runtime: 2 ms
+Memory: 33.33 MB
+```
+```c++
+class Solution {
+public:
+    vector<int> resultsArray(vector<int>& nums, int k) {
+        vector<int> ans;
+        int n = nums.size(), i, ck = 0, pre = -1;
+        for (i = 0; i < n; i ++) {
+            if (pre + 1 == nums[i]) {
+                ck += 1;
+            } else {
+                ck = 1;
+            }
+            pre = nums[i];
+            if (i >= k-1) {
+                if (ck >= k) {
+                    ans.push_back(pre);
+                } else {
+                    ans.push_back(-1);
+                }
+            }
+        }
+        return ans;
+    }
+};
+```
