--- a/algorithm/LeetCode/[Easy] 1652. Defuse the Bomb.md
+++ b/algorithm/LeetCode/[Easy] 1652. Defuse the Bomb.md
@@ -61,3 +61,79 @@ class Solution:
             code[i] = prefix[i + k] - prefix[i]
         return code
 ```
+
+**Solution 2: (Sliding Window)**
+```
+Runtime: 0 ms
+Memory: 10.36 MB
+``
+```c++
+class Solution {
+public:
+    vector<int> decrypt(vector<int>& code, int k) {
+        int n = code.size(), i, j, cur = 0;
+        vector<int> ans(n);
+        if (k == 0) {
+            return ans;
+        }
+        if (k > 0) {
+            j = 0;
+            while (j < k) {
+                cur += code[j];
+                j += 1;
+            }
+            for (i = 0; i < n; i ++) {
+                cur += code[j];
+                cur -= code[(((j-k)%n)+n)%n];
+                ans[i] = cur;
+                j = (j+1)%n;
+            }
+        } else {
+            j = n-1;
+            while (j >= n+k) {
+                cur += code[j];
+                j -= 1;
+            }
+            for (i = n-1; i >= 0; i --) {
+                cur += code[j];
+                cur -= code[(((j-k)%n)+n)%n];
+                ans[i] = cur;
+                j = (((j-1)%n)+n)%n;
+            }
+        }
+        return ans;
+    }
+};
+```
+**Solution 3: (Sliding Window)**
+```
+Runtime: 0 ms
+Memory: 10.38 MB
+```
+```c++
+class Solution {
+public:
+    vector<int> decrypt(vector<int>& code, int k) {
+        vector<int> result(code.size(), 0);
+        if (k == 0) return result;
+        // Define the initial window and initial sum
+        int start = 1, end = k, sum = 0;
+        // If k < 0, the starting point will be end of the array.
+        if (k < 0) {
+            start = code.size() - abs(k);
+            end = code.size() - 1;
+        }
+        for (int i = start; i <= end; i++) sum += code[i];
+        // Scan through the code array as i moving to the right, update the
+        // window sum.
+        for (int i = 0; i < code.size(); i++) {
+            result[i] = sum;
+            sum -= code[start % code.size()];
+            sum += code[(end + 1) % code.size()];
+            start++;
+            end++;
+        }
+        return result;
+    }
+};
+```
