update LeetCode Weekly Contest 426

--- a/algorithm/LeetCode/[Easy] 1346. Check If N and Its Double Exist.md
+++ b/algorithm/LeetCode/[Easy] 1346. Check If N and Its Double Exist.md
@@ -52,3 +52,30 @@ class Solution:
             seen.add(i)
         return False
 ```
+
+**Solution 2: (Prefix Sum)**
+```
+Runtime: 0 ms
+Memory: 14.44 MB
+```
+```c++
+class Solution {
+public:
+    bool checkIfExist(vector<int>& arr) {
+        bool dp[4001] = {0};
+        for (auto a: arr) {
+            if (a > 0 ) {
+                if (dp[2000 + 2*a] || a%2 == 0 && dp[2000 + a/2]) {
+                    return true;
+                }
+            } else {
+                if (dp[2000 + 2*a] || a%2 == 0 && dp[2000 + a/2]) {
+                    return true;
+                }
+            }
+            dp[a+2000] = true;
+        }
+        return false;
+    }
+};
+```
