--- a/algorithm/LeetCode/[Hard] 2097. Valid Arrangement of Pairs.md
+++ b/algorithm/LeetCode/[Hard] 2097. Valid Arrangement of Pairs.md
@@ -101,6 +101,170 @@ public:
         return res;
     }
 };
-Console
+```
 
+**Solution 2: (Hierholzer's Algorithm (Iterative))**
+```
+Runtime: 495 ms
+Memory: 433.62 MB
+```
+```c++
+class Solution {
+public:
+    vector<vector<int>> validArrangement(vector<vector<int>>& pairs) {
+        unordered_map<int, deque<int>> adjacencyMatrix;
+        unordered_map<int, int> inDegree, outDegree;
+
+        // Build the adjacency list and track in-degrees and out-degrees
+        for (const auto& pair : pairs) {
+            int start = pair[0], end = pair[1];
+            adjacencyMatrix[start].push_back(end);
+            outDegree[start]++;
+            inDegree[end]++;
+        }
+
+        vector<int> result;
+
+        // Find the start node (outDegree == inDegree + 1)
+        int startNode = -1;
+        for (const auto& entry : outDegree) {
+            int node = entry.first;
+            if (outDegree[node] == inDegree[node] + 1) {
+                startNode = node;
+                break;
+            }
+        }
+
+        // If no such node exists, start from the first pair's first element
+        if (startNode == -1) {
+            startNode = pairs[0][0];
+        }
+
+        stack<int> nodeStack;
+        nodeStack.push(startNode);
+
+        // Iterative DFS using stack
+        while (!nodeStack.empty()) {
+            int node = nodeStack.top();
+            if (!adjacencyMatrix[node].empty()) {
+                // Visit the next node
+                int nextNode = adjacencyMatrix[node].front();
+                adjacencyMatrix[node].pop_front();
+                nodeStack.push(nextNode);
+            } else {
+                // No more neighbors to visit, add node to result
+                result.push_back(node);
+                nodeStack.pop();
+            }
+        }
+
+        // Reverse the result since we collected nodes in reverse order
+        reverse(result.begin(), result.end());
+
+        // Construct the result pairs
+        vector<vector<int>> pairedResult;
+        for (int i = 1; i < result.size(); ++i) {
+            pairedResult.push_back({result[i - 1], result[i]});
+        }
+
+        return pairedResult;
+    }
+};
+
+```
+
+**Solution 3: (DFS, post order)**
+```
+Runtime: 425 ms
+Memory: 285.06 MB
+```
+```c++
+class Solution {
+    void dfs(int v, unordered_map<int,vector<int>> &g, vector<int> &dp) {
+        int nv;
+        while (g[v].size()) {
+            nv = g[v].back();
+            g[v].pop_back();
+            dfs(nv, g, dp);
+        }
+        dp.push_back(v);
+    }
+public:
+    vector<vector<int>> validArrangement(vector<vector<int>>& pairs) {
+        unordered_map<int,vector<int>> g;
+        unordered_map<int,int> in, out;
+        int i = -1;
+        vector<int> dp;
+        vector<vector<int>> ans;
+        for (auto p: pairs) {
+            g[p[0]].push_back(p[1]);
+            in[p[0]] += 1;
+            out[p[1]] += 1;
+        }
+        for (auto [v, c]: in) {
+            if (out[v] == c-1) {
+                i = v;
+                break;
+            }
+        }
+        if (i == -1) {
+            i = pairs[0][0];
+        }
+        dfs(i, g, dp);
+        while (dp.size() >= 2) {
+            ans.push_back({dp[dp.size()-1], dp[dp.size()-2]});
+            dp.pop_back();
+        }
+        return ans;
+    }
+};
+```
+
+**Solution 4: (DFS, post order, iterative)**
+```
+Runtime: 346 ms
+Memory: 263.28 MB
+```
+```c++
+class Solution {
+public:
+    vector<vector<int>> validArrangement(vector<vector<int>>& pairs) {
+        unordered_map<int,vector<int>> g;
+        unordered_map<int,int> deg;
+        int i, j;
+        vector<int> dp;
+        vector<vector<int>> ans;
+        for (auto p: pairs) {
+            g[p[0]].push_back(p[1]);
+            deg[p[0]] += 1;
+            deg[p[1]] -= 1;
+        }
+        i = pairs[0][0];
+        for (auto [v, c]: deg) {
+            if (c == 1) {
+                i = v;
+                break;
+            }
+        }
+        stack<int> stk;
+        stk.push(i);
+        while (stk.size()) {
+            i = stk.top();
+            if (g[i].size()) {
+                j = g[i].back();
+                g[i].pop_back();
+                stk.push(j);
+            } else {
+                dp.push_back(i);
+                stk.pop();
+            }
+        }
+        i = dp.size()-1;
+        while (i) {
+            ans.push_back({dp[i], dp[i-1]});
+            i -= 1;
+        }
+        return ans;
+    }
+};
 ```
