--- a/algorithm/LeetCode/[Hard] 2577. Minimum Time to Visit a Cell In a Grid.md
+++ b/algorithm/LeetCode/[Hard] 2577. Minimum Time to Visit a Cell In a Grid.md
@@ -91,3 +91,114 @@ public:
     }
 };
 ```
+
+**Solution 2: (Modified Dijkstra's Algorithm)**
+```
+Runtime: 859 ms
+Memory: 173.18 MB
+```
+```c++
+class Solution {
+    // Checks if given cell coordinates are valid and unvisited
+    bool isValid(vector<vector<bool>>& visited, int row, int col) {
+        return row >= 0 && col >= 0 && row < visited.size() &&
+               col < visited[0].size() && !visited[row][col];
+    }
+public:
+    int minimumTime(vector<vector<int>>& grid) {
+        // If both initial moves require more than 1 second, impossible to
+        // proceed
+        if (grid[0][1] > 1 && grid[1][0] > 1) {
+            return -1;
+        }
+
+        int rows = grid.size(), cols = grid[0].size();
+        // Possible movements: down, up, right, left
+        vector<vector<int>> directions = {{1, 0}, {-1, 0}, {0, 1}, {0, -1}};
+        vector<vector<bool>> visited(rows, vector<bool>(cols, false));
+
+        // Priority queue stores {time, row, col}
+        // Ordered by minimum time to reach each cell
+        priority_queue<vector<int>, vector<vector<int>>, greater<>> pq;
+        pq.push({grid[0][0], 0, 0});
+
+        while (!pq.empty()) {
+            auto curr = pq.top();
+            pq.pop();
+            int time = curr[0], row = curr[1], col = curr[2];
+
+            // Check if reached target
+            if (row == rows - 1 && col == cols - 1) {
+                return time;
+            }
+
+            // Skip if cell already visited
+            if (visited[row][col]) {
+                continue;
+            }
+            visited[row][col] = true;
+
+            // Try all four directions
+            for (auto& d : directions) {
+                int nextRow = row + d[0], nextCol = col + d[1];
+                if (!isValid(visited, nextRow, nextCol)) {
+                    continue;
+                }
+
+                // Calculate the wait time needed to move to next cell
+                int waitTime =
+                    ((grid[nextRow][nextCol] - time) % 2 == 0) ? 1 : 0;
+                int nextTime = max(grid[nextRow][nextCol] + waitTime, time + 1);
+                pq.push({nextTime, nextRow, nextCol});
+            }
+        }
+        return -1;
+    }
+};
+```
+
+**Solution 3: (Dijkstra)**
+```
+Runtime: 151 ms
+Memory: 56.38 MB
+```
+```c++
+class Solution {
+    int dd[5] = {0, 1, 0, -1, 0};
+public:
+    int minimumTime(vector<vector<int>>& grid) {
+        if (grid[0][1] > 1 && grid[1][0] > 1) {
+            return -1;
+        }
+
+        int m = grid.size(), n = grid[0].size(), nr, nc, nt, w;
+        vector<vector<int>> time(m, vector<int>(n, INT_MAX));
+        priority_queue<tuple<int,int,int>, vector<tuple<int,int,int>>, greater<tuple<int,int,int>>> pq;
+
+        pq.push({0, 0, 0});
+        time[0][0] = 0;
+        while (!pq.empty()) {
+            auto [t, r, c] = pq.top();
+            pq.pop();
+            if (r == m - 1 && c == n - 1) {
+                return t;
+            }
+
+            for (int d = 0; d < 4; d++) {
+                nr = r + dd[d];
+                nc = c + dd[d + 1];
+                if (nr >= 0 && nr < m && nc >= 0 && nc < n) {
+                    w = ((grid[nr][nc]-t)&1) ? 0 : 1;
+                    nt = max(t+1, grid[nr][nc] + w); // backward if neccessary
+                    if (nt < time[nr][nc]) {
+                        time[nr][nc] = nt;
+                        pq.push({nt, nr, nc});
+                    }
+                }
+            }
+        }
+
+        return -1;
+    }
+};
+```
