--- a/algorithm/LeetCode/[Hard] 2290. Minimum Obstacle Removal to Reach Corner.md
+++ b/algorithm/LeetCode/[Hard] 2290. Minimum Obstacle Removal to Reach Corner.md
@@ -105,3 +105,106 @@ public:
     }
 };
 ```
+
+
+**Solution 3: (0-1 BFS, deque)**
+```
+Runtime: 115 ms
+Memory: 130.76 MB
+```
+```c++
+class Solution {
+    // Directions for movement: right, left, down, up
+    vector<vector<int>> directions = {{0, 1}, {0, -1}, {1, 0}, {-1, 0}};
+
+    // Helper method to check if the cell is within the grid bounds
+    bool isValid(vector<vector<int>>& grid, int row, int col) {
+        return row >= 0 && col >= 0 && row < grid.size() &&
+               col < grid[0].size();
+    }
+public:
+    int minimumObstacles(vector<vector<int>>& grid) {
+         int m = grid.size(), n = grid[0].size();
+
+        // Distance matrix to store the minimum obstacles removed to reach each
+        // cell
+        vector<vector<int>> minObstacles(m, vector<int>(n, INT_MAX));
+
+        minObstacles[0][0] = 0;
+
+        deque<array<int, 3>> deque;
+        deque.push_back({0, 0, 0});  // {obstacles, row, col}
+
+        while (!deque.empty()) {
+            auto current = deque.front();
+            deque.pop_front();
+            int obstacles = current[0], row = current[1], col = current[2];
+
+            // Explore all four possible directions from the current cell
+            for (auto& dir : directions) {
+                int newRow = row + dir[0], newCol = col + dir[1];
+
+                if (isValid(grid, newRow, newCol) &&
+                    minObstacles[newRow][newCol] == INT_MAX) {
+                    if (grid[newRow][newCol] == 1) {
+                        // If it's an obstacle, add 1 to obstacles and push to
+                        // the back
+                        minObstacles[newRow][newCol] = obstacles + 1;
+                        deque.push_back({obstacles + 1, newRow, newCol});
+                    } else {
+                        // If it's an empty cell, keep the obstacle count and
+                        // push to the front
+                        minObstacles[newRow][newCol] = obstacles;
+                        deque.push_front({obstacles, newRow, newCol});
+                    }
+                }
+            }
+        }
+
+        return minObstacles[m - 1][n - 1];
+    }
+};
+```
+
+**Solution 4: (BFS, put next level into buffer)**
+```
+Runtime: 116 ms
+Memory: 117.21 MB
+```
+```c++
+class Solution {
+    int dd[5] = {0, 1, 0, -1, 0};
+public:
+    int minimumObstacles(vector<vector<int>>& grid) {
+        int m = grid.size(), n = grid[0].size(), nr, nc, ans = 0;
+        vector<vector<bool>> visited(m, vector<bool>(n));
+        queue<pair<int,int>> q, dp;
+        q.push({0, 0});
+        visited[0][0] = true;
+        while (q.size()) {
+            auto [r, c] = q.front();
+            q.pop();
+            if (r == m-1 && c == n-1) {
+                return ans;
+            }
+            for (int d = 0; d < 4; d++) {
+                nr = r + dd[d];
+                nc = c + dd[d+1];
+                if (0 <= nr && nr < m && 0 <= nc && nc < n && !visited[nr][nc]) {
+                    if (grid[nr][nc] == 0) {
+                        q.push({nr, nc});
+                    } else {
+                        dp.push({nr,nc});
+                    }
+                    visited[nr][nc] = true;
+                }
+            }
+            if (q.size() == 0) {
+                swap(q, dp);
+                ans += 1;
+            }
+        }
+        return -1;
+    }
+};
+```
