--- a/algorithm/LeetCode/[Easy] 1455. Check If a Word Occurs As a Prefix of Any Word in a Sentence.md
+++ b/algorithm/LeetCode/[Easy] 1455. Check If a Word Occurs As a Prefix of Any Word in a Sentence.md
@@ -67,3 +67,33 @@ class Solution:
                 return i
         return -1
 ```
+
+**Solution 2: (Two Pointer)**
+```
+Runtime: 0 ms
+Memory: 8.17 MB
+```
+```c++
+class Solution {
+public:
+    int isPrefixOfWord(string sentence, string searchWord) {
+        int m = sentence.size(), n = searchWord.size(), i = 0, j, k = 1;
+        while (i < m) {
+            j = 0;
+            while (i < m && sentence[i] != ' ' && j < n && sentence[i] == searchWord[j]) {
+                i += 1;
+                j += 1;
+                if (j == n) {
+                    return k;
+                }
+            }
+            while (i < m && sentence[i] != ' ') {
+                i += 1;
+            }
+            i += 1;
+            k += 1;
+        }
+        return -1;
+    }
+};
+```
