--- a/algorithm/LeetCode/[Easy] 2558. Take Gifts From the Richest Pile.md
+++ b/algorithm/LeetCode/[Easy] 2558. Take Gifts From the Richest Pile.md
@@ -60,25 +60,25 @@ class Solution:
 
 **Solution 2: (Heap)**
 ```
-Runtime: 3 ms
-Memory: 9.3 MB
+Runtime: 0 ms
+Memory: 13.36 MB
 ```
 ```c++
 class Solution {
 public:
     long long pickGifts(vector<int>& gifts, int k) {
-        priority_queue<int>pq;
-        for (auto gift : gifts){
-            pq.push(gift);
-        }
-        while(!pq.empty() && k > 0){
-            int top=pq.top();
+        priority_queue<int> pq(gifts.begin(), gifts.end());
+        while (k) {
+            auto cur = pq.top();
+            if (cur == 1) {
+                break;
+            }
             pq.pop();
-            k --;
-            pq.push(sqrt(top));
+            pq.push(sqrt(cur));
+            k -= 1;
         }
         long long ans = 0;
-        while(!pq.empty()){
+        while (pq.size()) {
             ans += pq.top();
             pq.pop();
         }
