update LeetCode Biweekly Contest 146

--- a/algorithm/LeetCode/[Easy] 1475. Final Prices With a Special Discount in a Shop.md
+++ b/algorithm/LeetCode/[Easy] 1475. Final Prices With a Special Discount in a Shop.md
@@ -52,3 +52,28 @@ class Solution:
             stack.append(i)
         return prices
 ```
+
+**Solution 2: (Stack, Monotonic Stack)**
+```
+Runtime: 2 ms
+Memory: 14.18 MB
+```
+```c++
+class Solution {
+public:
+    vector<int> finalPrices(vector<int>& prices) {
+        int n = prices.size(), i, j;
+        stack<int> stk;
+        vector<int> ans = prices;
+        for (i = 0; i < n; i ++) {
+            while (stk.size() && ans[i] <= ans[stk.top()]) {
+                j = stk.top();
+                stk.pop();
+                ans[j] -= prices[i];
+            }
+            stk.push(i);
+        }
+        return ans;
+    }
+};
+```
