--- a/algorithm/LeetCode/[Hard] 2940. Find Building Where Alice and Bob Can Meet.md
+++ b/algorithm/LeetCode/[Hard] 2940. Find Building Where Alice and Bob Can Meet.md
@@ -46,60 +46,7 @@ For ans[i] == -1, It can be shown that there is no building where Alice and Bob 
 
 # Submissions
 ---
-**Solution 1: (Mono stack)**
-```
-Runtime: 408 ms
-Memory: 192 MB
-```
-```c++
-class Solution {
-public:
-    vector<int> leftmostBuildingQueries(vector<int>& heights, vector<vector<int>>& queries) {
-        int n = heights.size();
-        vector<int> next(n, -1);
-        stack<int> st;
-        for ( int i = n-1; i >= 0; --i ) {
-            while ( !st.empty() && heights[st.top()] <= heights[i] ) {
-                st.pop();
-            }
-            if ( !st.empty() ) {
-                next[i] = st.top();
-            }
-            st.push(i);
-        } 
-        vector<int> ans;
-        for ( auto q : queries ) {
-            if ( q[0] == q[1] ) {
-                ans.push_back(q[0]);
-                continue;
-            }
-            if ( q[0] > q[1] ) {
-                swap(q[0], q[1]);
-            }
-            if ( heights[q[1]] > heights[q[0]] ) {
-                ans.push_back(q[1]);
-                continue;
-            }
-            if ( next[q[0]] == -1 ) {
-                ans.push_back(-1);
-                continue;
-            }
-            int i = next[q[1]];
-            if ( i == -1 ) {
-                ans.push_back(-1);
-                continue;
-            }
-            while ( i >= 0 && i < n && heights[i] <= heights[q[0]] ) {
-                i = next[i];
-            }
-            ans.push_back(i);
-        }
-        return ans;
-    }
-};
-```
-
-**Solution 2: (Sort Queries)**
+**Solution 1: (Sort Queries)**
 ```
 Runtime: 394 ms
 Memory: 175.1 MB
@@ -131,6 +78,105 @@ public:
             res[i] = it == rend(mono) ? -1 : *it;
         }
         return res;
+    }
+};
+```
+
+**Solution 2: (Monotonic Stack, dynamic mono stack with binary search, O(q log(n)))**
+```
+Runtime: 55 ms
+Memory: 262.56 MB
+```
+```c++
+class Solution {
+    int search(int height, vector<pair<int, int>>& monoStack) {
+        int left = 0;
+        int right = monoStack.size() - 1;
+        int ans = -1;
+        while (left <= right) {
+            int mid = (left + right) / 2;
+            if (monoStack[mid].first > height) {
+                ans = max(ans, mid);
+                left = mid + 1;
+            } else
+                right = mid - 1;
+        }
+        return ans;
+    }
+public:
+    vector<int> leftmostBuildingQueries(vector<int>& heights, vector<vector<int>>& queries) {
+        vector<pair<int, int>> monoStack;
+        vector<int> result(queries.size(), -1);
+        vector<vector<pair<int, int>>> newQueries(heights.size());
+        for (int i = 0; i < queries.size(); i++) {
+            int a = queries[i][0];
+            int b = queries[i][1];
+            if (a > b) swap(a, b);
+            if (heights[b] > heights[a] || a == b)
+                result[i] = b;
+            else
+                newQueries[b].push_back({heights[a], i});
+        }
+
+        for (int i = heights.size() - 1; i >= 0; i--) {
+            int monoStackSize = monoStack.size();
+            for (auto& [a, b] : newQueries[i]) {
+                int position = search(a, monoStack);
+                if (position < monoStackSize && position >= 0)
+                    result[b] = monoStack[position].second;
+            }
+            while (!monoStack.empty() && monoStack.back().first <= heights[i])
+                monoStack.pop_back();
+            monoStack.push_back({heights[i], i});
+        }
+        return result;
+    }
+};
+```
+
+**Solution 3: (Priority Queue)**
+```
+Runtime: 279 ms
+Memory: 321.16 MB
+```
+```c++
+class Solution {
+public:
+    vector<int> leftmostBuildingQueries(vector<int>& heights, vector<vector<int>>& queries) {
+        vector<vector<vector<int>>> storeQueries(heights.size());
+        priority_queue<vector<int>, vector<vector<int>>, greater<vector<int>>>
+            maxIndex;
+        vector<int> result(queries.size(), -1);
+
+        // Store the mappings for all queries in storeQueries.
+        for (int currQuery = 0; currQuery < queries.size(); currQuery++) {
+            int a = queries[currQuery][0], b = queries[currQuery][1];
+            if (a < b && heights[a] < heights[b]) {
+                result[currQuery] = b;
+            } else if (a > b && heights[a] > heights[b]) {
+                result[currQuery] = a;
+            } else if (a == b) {
+                result[currQuery] = a;
+            } else {
+                storeQueries[max(a, b)].push_back(
+                    {max(heights[a], heights[b]), currQuery});
+            }
+        }
+
+        for (int index = 0; index < heights.size(); index++) {
+            // If the priority queue's minimum pair value is less than the
+            // current index of height, it is an answer to the query.
+            while (!maxIndex.empty() && maxIndex.top()[0] < heights[index]) {
+                result[maxIndex.top()[1]] = index;
+                maxIndex.pop();
+            }
+            // Push the with their maximum index as the current index in the
+            // priority queue.
+            for (auto& element : storeQueries[index]) {
+                maxIndex.push(element);
+            }
+        }
+        return result;
     }
 };
 ```
