--- a/algorithm/LeetCode/[Easy] 3264. Final Array State After K Multiplication Operations I.md
+++ b/algorithm/LeetCode/[Easy] 3264. Final Array State After K Multiplication Operations I.md
@@ -77,3 +77,30 @@ public:
     }
 };
 ```
+
+**Solution 2: (Heap)**
+```
+Runtime: 0 ms
+Memory: 27.88 MB
+```
+```c++
+class Solution {
+public:
+    vector<int> getFinalState(vector<int>& nums, int k, int multiplier) {
+        int n = nums.size(), i;
+        vector<int> ans = nums;
+        priority_queue<pair<int,int>, vector<pair<int,int>>, greater<pair<int,int>>> pq;
+        for (i = 0; i < n; i ++) {
+            pq.push({nums[i], i});
+        }
+        while (k) {
+            auto [cur, j] = pq.top();
+            pq.pop();
+            ans[j] *= multiplier;
+            pq.push({cur*multiplier, j});
+            k -= 1;
+        }
+        return ans;
+    }
+};
+```
