--- a/algorithm/LeetCode/[Hard] 2872. Maximum Number of K-Divisible Components.md
+++ b/algorithm/LeetCode/[Hard] 2872. Maximum Number of K-Divisible Components.md
@@ -49,33 +49,34 @@ It can be shown that no other valid split has more than 3 connected components.
 
 # Submissions
 ---
-**Solution 1: (BFS)**
+**Solution 1: (Topological Sort)**
 ```
-Runtime: 376 ms
-Memory: 167.8 MB
+Runtime: 95 ms
+Memory: 173.68 MB
 ```
 ```c++
 class Solution {
 public:
     int maxKDivisibleComponents(int n, vector<vector<int>>& edges, vector<int>& values, int k) {
-        vector<vector<int>> al(n);
+        vector<vector<int>> g(n);
         vector<int> cnt(n);
-        int res = 0;
+        int i, res = 0;
         for(const auto &e : edges) {
-            al[e[0]].push_back(e[1]);
-            al[e[1]].push_back(e[0]);        
+            g[e[0]].push_back(e[1]);
+            g[e[1]].push_back(e[0]);        
         }
         queue<int> q;
         for (int i = 0; i < n; ++i) {
-            cnt[i] = al[i].size();
+            cnt[i] = g[i].size();
             if (cnt[i] < 2)
                 q.push(i);
         }
-        while(!q.empty()) {
-            int i = q.front(); q.pop();
+        while (!q.empty()) {
+            i = q.front();
+            q.pop();
             --cnt[i];
             res += values[i] % k == 0;
-            for (auto j : al[i]) {
+            for (auto j : g[i]) {
                 if (cnt[j] != 0) {
                     values[j] += values[i] % k;
                     if (--cnt[j] == 1)
