--- a/algorithm/LeetCode/[Hard] 1639. Number of Ways to Form a Target String Given a Dictionary.md
+++ b/algorithm/LeetCode/[Hard] 1639. Number of Ways to Form a Target String Given a Dictionary.md
@@ -160,28 +160,96 @@ public:
 ```
 
 **Solution 4: (DP Bottom-Up)**
+
+    a c c a
+    b b b b
+    c a c a
+        ^j
+    a b a
+        ^i
+
+
+      0 1 2 3
+    0 1 2 2 4 <i
+    1   1 3 5
+    2       6
+      ^j
+
+    dp[i][j]
+    = dp[i][j-1] + dp[i-1][j-1]*cnt[j][target[i]]
+
+
+    a b b a
+    b a a b
+    ^j
+    b a b
+      ^i
+
+      0 1 2 3
+    0 1 2 3 4
+    1   1 3 6
+    2     1 4
+
 ```
-Runtime: 226 ms
-Memory: 54.3 MB
+Runtime: 65 ms
+Memory: 84.05 MB
 ```
 ```c++
 class Solution {
 public:
     int numWays(vector<string>& words, string target) {
-        long mod = 1e9+7, M = words.size(), L = words[0].size(), N = target.size();
-        if (L < N) return 0;
-        vector<array<long, 26>> cnt(L, array<long, 26>());
-        for (int i = 0; i < L; ++i) {
-            for (int j = 0; j < M; ++j) cnt[i][words[j][i] - 'a']++;
-        }
-        vector<vector<int>> dp(L + 1, vector<int>(N + 1));
-        for (int i = 0; i < L; ++i) {
-            dp[i][0] = 1;
-            for (int j = 0; j <= i && j < N; ++j) {
-                dp[i + 1][j + 1] = ((cnt[i][target[j] - 'a'] * dp[i][j]) % mod + dp[i][j + 1]) % mod;
+        int m = words[0].size(), n = target.size(), i, j, MOD=1e9+7;
+        vector<vector<long long>> dp(n, vector<long long>(m));
+        vector<vector<int>> cnt(m, vector<int>(26));
+        for (i = 0; i < words.size(); i ++) {
+            for (j = 0; j < m; j ++) {
+                cnt[j][words[i][j]-'a'] += 1;
             }
         }
-        return dp[L][N];
+        dp[0][0] = cnt[0][target[0]-'a'];
+        for (j = 1; j < m; j ++) {
+            dp[0][j] = dp[0][j-1] + cnt[j][target[0]-'a'];
+        }
+        for (i = 1; i < n; i ++) {
+            for (j = 1; j < m; j ++) {
+                dp[i][j] = dp[i][j-1] + dp[i-1][j-1]*cnt[j][target[i]-'a'];
+                dp[i][j] %= MOD;
+            }
+        }
+        return dp[n-1][m-1];
+    }
+};
+```
+
+**Solution 5: (DP Bottom-Up 1-D)**
+```
+Runtime: 50 ms
+Memory: 32.87 MB
+```
+```c++
+class Solution {
+public:
+    int numWays(vector<string>& words, string target) {
+        int m = words[0].size(), n = target.size(), i, j, MOD=1e9+7;
+        vector<long long> dp(m), pre(m);
+        vector<vector<int>> cnt(m, vector<int>(26));
+        for (i = 0; i < words.size(); i ++) {
+            for (j = 0; j < m; j ++) {
+                cnt[j][words[i][j]-'a'] += 1;
+            }
+        }
+        pre[0] = cnt[0][target[0]-'a'];
+        for (j = 1; j < m; j ++) {
+            pre[j] = pre[j-1] + cnt[j][target[0]-'a'];
+        }
+        for (i = 1; i < n; i ++) {
+            for (j = 1; j < m; j ++) {
+                dp[j] = dp[j-1] + pre[j-1]*cnt[j][target[i]-'a'];
+                dp[j] %= MOD;
+            }
+            pre = dp;
+        }
+        return pre[m-1];
     }
 };
 ```
