--- a/algorithm/LeetCode/[Easy] 1422. Maximum Score After Splitting a String.md
+++ b/algorithm/LeetCode/[Easy] 1422. Maximum Score After Splitting a String.md
@@ -50,7 +50,36 @@ class Solution:
         return max([s[:i].count('0') + s[i:].count('1') for i in range(1, len(s))])
 ```
 
-**Solution 2: (One Pass)**
+**Solution 2: (Two Pass)**
+```
+Runtime: 0 ms
+Memory: 8.61 MB
+```
+```c++
+class Solution {
+public:
+    int maxScore(string s) {
+        int n = s.size(), i, zero = 0, one = 0, ans = 0;
+        for (i = n-1; i >= 0; i --) {
+            one += s[i] == '1';
+        }
+        for (i = 0; i < n-1; i ++) {
+            zero += s[i] == '0';
+            one -= s[i] == '1';
+            ans = max(ans, zero + one);
+        }
+        return ans;
+    }
+};
+```
+
+**Solution 3: (One Pass)**
+
+        0  1  1  1  0  1
+zeros   1  1  1  1  2
+ones    0  1  2  3  3  4
+best    1  1  1  1  1
+
 ```
 Runtime: 0 ms
 Memory: 6.5 MB
