update LeetCode Weekly Contest 432

--- a/algorithm/LeetCode/[Easy] 1408. String Matching in an Array.md
+++ b/algorithm/LeetCode/[Easy] 1408. String Matching in an Array.md
@@ -54,3 +54,304 @@ class Solution:
                     
         return list(res)
 ```
+
+
+**Solution 2: (KMP)**
+```
+Runtime: 0 ms
+Memory: 11.52 MB
+```
+```c++
+class Solution {
+    // Function to compute the LPS (Longest Prefix Suffix) array for the
+    // substring `sub`.
+    vector<int> computeLPSArray(string &sub) {
+        vector<int> lps(sub.size(), 0);  // Initialize the LPS array with 0.
+        int currentIndex = 1;            // Start from the second character.
+        // Length of the current longest prefix which is also a suffix.
+        int len = 0;
+
+        while (currentIndex < sub.size()) {
+            if (sub[currentIndex] == sub[len]) {
+                len++;  // If the current characters match, extend the prefix.
+                lps[currentIndex] = len;  // Store the length of the prefix.
+                currentIndex++;
+            } else {
+                if (len > 0) {
+                    len = lps[len - 1];  // Backtrack using LPS array to find a
+                                         // shorter match.
+                } else {
+                    currentIndex++;
+                }
+            }
+        }
+        return lps;
+    }
+
+    // Function to check if `sub` is a substring of `main` using the KMP
+    // algorithm.
+    bool isSubstringOf(string &sub, string &main, vector<int> &lps) {
+        int mainIndex = 0;  // Pointer for `main`.
+        int subIndex = 0;   // Pointer for `sub`.
+
+        while (mainIndex < main.size()) {
+            if (main[mainIndex] == sub[subIndex]) {
+                subIndex++;
+                mainIndex++;
+                if (subIndex == sub.size()) return true;  // Found a match.
+            } else {
+                if (subIndex > 0) {
+                    // Use the LPS to skip unnecessary comparisons.
+                    subIndex = lps[subIndex - 1];
+                } else {
+                    mainIndex++;
+                }
+            }
+        }
+        return false;  // No match found.
+    }
+public:
+    vector<string> stringMatching(vector<string>& words) {
+        vector<string> matchingWords;
+
+        for (int currentWordIndex = 0; currentWordIndex < words.size();
+             currentWordIndex++) {
+            vector<int> lps = computeLPSArray(words[currentWordIndex]);
+            // Compare the current word with all other words.
+            for (int otherWordIndex = 0; otherWordIndex < words.size();
+                 otherWordIndex++) {
+                if (currentWordIndex == otherWordIndex)
+                    continue;  // Skip comparing the word with itself.
+
+                // Check if the current word is a substring of another word.
+                if (isSubstringOf(words[currentWordIndex],
+                                  words[otherWordIndex], lps)) {
+                    matchingWords.push_back(words[currentWordIndex]);
+                    break;  // No need to check further for this word.
+                }
+            }
+        }
+
+        return matchingWords;
+    }
+};
+```
+
+**Solution 3: (Suffix Trie, O(m^2 x n))**
+
+```
+Runtime: 25 ms
+Memory: 27.58 MB
+```
+```c++
+class Solution {
+    class TrieNode {
+    public:
+        // Tracks how many times this substring appears in the Trie.
+        int frequency;
+        // Maps characters to their respective child nodes.
+        unordered_map<char, TrieNode*> childNodes;
+    };
+
+    // Function to insert a word (or suffix) into the Trie.
+    void insertWord(TrieNode* root, const string& word) {
+        TrieNode* currentNode = root;
+        for (char c : word) {
+            // If the character already exists as a child node, move to it.
+            if (currentNode->childNodes.find(c) !=
+                currentNode->childNodes.end()) {
+                currentNode = currentNode->childNodes[c];
+                // Increment the frequency of the node.
+                currentNode->frequency++;
+            } else {
+                // If the character does not exist, create a new node.
+                TrieNode* newNode = new TrieNode();
+                // Initialize the frequency to 1.
+                newNode->frequency = 1;
+                // Add the new node as a child.
+                currentNode->childNodes[c] = newNode;
+                currentNode = newNode;  // Move to the new node.
+            }
+        }
+    }
+
+    // Function to check if a word exists as a substring in the Trie.
+    bool isSubstring(TrieNode* root, string& word) {
+        TrieNode* currentNode = root;  // Start from the root node.
+        for (char c : word) {
+            // Traverse the Trie following the characters of the word.
+            currentNode = currentNode->childNodes[c];
+        }
+        // A word is a substring or a different string if its frequency in the
+        // Trie is greater than 1.
+        return currentNode->frequency > 1;
+    }
+public:
+    vector<string> stringMatching(vector<string>& words) {
+        vector<string> matchingWords;
+        TrieNode* root = new TrieNode();  // Initialize the root of the Trie.
+
+        // Insert all suffixes of each word into the Trie.
+        for (const auto& word : words) {
+            for (int startIndex = 0; startIndex < word.size(); startIndex++) {
+                // Insert each suffix starting from index `startIndex`.
+                insertWord(root, word.substr(startIndex));
+            }
+        }
+
+        // Check each word to see if it exists as a substring in the Trie.
+        for (auto word : words) {
+            if (isSubstring(root, word)) {
+                matchingWords.push_back(word);
+            }
+        }
+
+        return matchingWords;
+    }
+};
+```
+
+**Solution 4: (String, O(m^2 x n^2))**
+```
+Runtime: 0 ms
+Memory: 11.48 MB
+```
+```c++
+class Solution {
+public:
+    vector<string> stringMatching(vector<string>& words) {
+        int n = words.size(), i, j;
+        vector<string> ans;
+        for (i = 0; i < n; i ++) {
+            for (j = 0; j < n; j ++) {
+                if (j != i && words[j].find(words[i]) != -1) {
+                    ans.push_back(words[i]);
+                    break;
+                }
+            }
+        }
+        return ans;
+    }
+};
+```
+
+**Solution 5: (KMP, O((m+m) x n^2))**
+
+    a b c a b c
+dp  0 0 0 1 2 3
+
+s   a a a b c a b a
+k   0 0 1 2 3 4 5 5
+                  2
+                  0              
+```
+Runtime: 4 ms
+Memory: 11.30 MB
+```
+```c++
+class Solution {
+public:
+    vector<string> stringMatching(vector<string>& words) {
+        int n = words.size(), i, j, i2, k;
+        vector<int> dp;
+        vector<string> ans;
+        bool flag;
+        for (j = 0; j < n; j ++) {
+            flag = false;
+            dp.clear();
+            dp.push_back(0);
+            k = 0;
+            for (i = 1; i < words[j].length(); i ++) {
+                if (words[j][i] == words[j][k]) {
+                    k += 1;
+                } else {
+                    while (k && words[j][i] != words[j][k]) {
+                        k = dp[k-1];
+                    }
+                }
+                dp.push_back(k);
+            }
+            for (i = 0; i < n; i ++) {
+                if (words[i].length() > words[j].length()) {
+                    k = 0;
+                    for (i2 = 0; i2 < words[i].length(); i2++) {
+                        if (words[i][i2] == words[j][k]) {
+                            k += 1;
+                            if (k == words[j].length()) {
+                                flag = true;
+                                ans.push_back(words[j]);
+                                break;
+                            }
+                        } else {
+                            while (k && words[i][i2] != words[j][k]) {
+                                k = dp[k-1];
+                            }
+                            if (words[i][i2] == words[j][k]) {
+                                k += 1;
+                            }
+                        }
+                    }
+                    if (flag) {
+                        break;
+                    }
+                }
+            }
+        }
+        return ans;
+    }
+};
+```
+
+**Solution 6: (Suffix Trie, create trie for every substring)**
+```
+Runtime: 22 ms
+Memory: 27.38 MB
+```
+```c++
+struct TrieNode {
+    unordered_map<char, TrieNode*> child;
+    int freq;
+};
+
+class Solution {
+    TrieNode *root;
+    void build(vector<string> &words) {
+        int i;
+        root = new TrieNode();
+        for (auto w: words) {
+            for (i = 0; i < w.size(); i ++) {
+                insert(w.substr(i));
+            }
+        }
+    }
+    void insert(string word) {
+        TrieNode *node = root;
+        for (auto c: word) {
+            if (!node->child.count(c)) {
+                node->child[c] = new TrieNode();
+                node->freq += 1;
+            }
+            node = node->child[c];
+        }
+        node->freq += 1;
+    }
+    bool search(string &word) {
+        TrieNode *node = root;
+        for (auto c: word) {
+            node = node->child[c];
+        }
+        return node->freq > 1;
+    }
+public:
+    vector<string> stringMatching(vector<string>& words) {
+        vector<string> ans;
+        build(words);
+        for (auto w: words) {
+            if (search(w)) {
+                ans.push_back(w);
+            }
+        }
+        return ans;
+    }
+};
+```
