--- a/algorithm/LeetCode/[Easy] 2185. Counting Words With a Given Prefix.md
+++ b/algorithm/LeetCode/[Easy] 2185. Counting Words With a Given Prefix.md
@@ -52,3 +52,47 @@ public:
     }
 };
 ```
+
+**Solution 3: (Trie)**
+```
+Runtime: 23 ms
+Memory: 63.99 MB
+```
+```c++
+struct TrieNode {
+    TrieNode *child[26] = {0};
+    int cnt = 0;
+};
+
+class Solution {
+    TrieNode *root;
+    void insert(string &word) {
+        TrieNode *node = root;
+        for (auto c: word) {
+            if (!node->child[c-'a']) {
+                node->child[c-'a'] = new TrieNode();
+            }
+            node = node->child[c-'a'];
+            node->cnt += 1;
+        }
+    }
+    int search(string &word) {
+        TrieNode *node = root;
+        for (auto c: word) {
+            if (!node->child[c-'a']) {
+                return 0;
+            }
+            node = node->child[c-'a'];
+        }
+        return node->cnt;
+    }
+public:
+    int prefixCount(vector<string>& words, string pref) {
+        root = new TrieNode();
+        for (auto w: words) {
+            insert(w);
+        }
+        return search(pref);
+    }
+};
+```
