--- a/algorithm/LeetCode/[Easy] 3042. Count Prefix and Suffix Pairs I.md
+++ b/algorithm/LeetCode/[Easy] 3042. Count Prefix and Suffix Pairs I.md
@@ -50,20 +50,79 @@ Therefore, the answer is 0.
 
 # Submissions
 ---
-**Solution 1: (Brute Force)**
+**Solution 1: (Brute Force, O(n^2 x m))**
 ```
-Runtime: 12 ms
-Memory: 23.22 MB
+Runtime: 0 ms
+Memory: 23.61 MB
 ```
 ```c++
 class Solution {
 public:
     int countPrefixSuffixPairs(vector<string>& words) {
-        int n = words.size(), ans = 0;
-        for (int i = 0; i < n; i ++) {
-            for (int j = i+1; j < n; j ++) {
-                if (words[i].size() <= words[j].size() && words[i] == words[j].substr(0, words[i].size()) && words[i] == words[j].substr(words[j].size() - words[i].size())) {
+        int n = words.size(), i, j, ki, kj, ans = 0;
+        for (i = 0; i < n; i ++) {
+            for (j = i+1; j < n; j ++) {
+                ki = words[i].length();
+                kj = words[j].length();
+                if (ki <= kj && words[j].substr(0, ki) == words[i] && words[j].substr(kj-ki) == words[i]) {
                     ans += 1;
+                }
+            }
+        }
+        return ans;
+    }
+};
+```
+
+**Solution 2: (Dual Trie, O(n^2 x m)**
+```
+Runtime: 11 ms
+Memory: 45.42 MB
+```
+```c++
+struct TrieNode {
+    TrieNode *child[26] = {0};
+};
+
+class Solution {
+    TrieNode *pref_root, *suf_root;
+    void insert(TrieNode *root, string &word) {
+        TrieNode *node = root;
+        for (auto c: word) {
+            if (!node->child[c-'a']) {
+                node->child[c-'a'] = new TrieNode();
+            }
+            node = node->child[c-'a'];
+        }
+    }
+    bool search(TrieNode *root, string &word) {
+        TrieNode *node = root;
+        for (auto c: word) {
+            if (!node->child[c-'a']) {
+                return false;
+            }
+            node = node->child[c-'a'];
+        }
+        return true;
+    }
+public:
+    int countPrefixSuffixPairs(vector<string>& words) {
+        int n = words.size(), i, j, ans = 0;
+        string rword;
+        for (j = 0; j < n; j ++) {
+            pref_root = new TrieNode();
+            suf_root = new TrieNode();
+            insert(pref_root, words[j]);
+            rword = words[j];
+            reverse(rword.begin(), rword.end());
+            insert(suf_root, rword);
+            for (i = 0; i < j; i ++) {
+                if (words[i].length() <= words[j].length()) {
+                    rword = words[i];
+                    reverse(rword.begin(), rword.end());
+                    if (search(pref_root, words[i]) && search(suf_root, rword)) {
+                        ans += 1;
+                    }
                 }
             }
         }
